--- a/Basics_MongoDB_.ipynb
+++ b/Basics_MongoDB_.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Basics_MongoDB .ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMsWcL/yzEBKcm60HnjFSFp",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMCo6zdZYTbZoWzyPlgEchA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -284,7 +285,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "# Quiz"
       ],
       "metadata": {
         "id": "ZHira6Utg4Pn"
@@ -293,12 +294,62 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "It is automatically generated as an ObjectId type value.\n",
+        "\n",
+        "    This is correct.\n",
+        "\n",
+        "    When inserting a document via the Data Explorer in Atlas, the _id value is already generated as an ObjectID type, while the rest of the fields are not.\n",
+        "\n",
+        "You can select a non ObjectId type value when inserting a new document, as long as that value is unique to this collection.\n",
+        "\n",
+        "    This is correct.\n",
+        "\n",
+        "    MongoDB generates a value, so that there is one just in case. You can definitely change the default value to a different value or data type, as long as they are unique to this collection and not an array data type.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "czTYm0wjkFdn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Quiz"
+      ],
+      "metadata": {
+        "id": "rMl4ZBgXJaGr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "MongoDB can store duplicate documents in the same collection, as long as their _id values are different.\n",
+        "\n",
+        "    This is true.\n",
+        "\n",
+        "    The only value that is being checked for duplicates on insertion by default is the _id value, since it serves as a unique identifier for the document.\n",
+        "\n",
+        "If a document is inserted without a provided _id value, then that field and value will be automatically generated for the inserted document before insertion.\n",
+        "\n",
+        "    This is true.\n",
+        "\n",
+        "    MongoDB ensures that each inserted document has a unique _id value.\n"
+      ],
+      "metadata": {
+        "id": "fj5L_qdfl27A"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         ""
       ],
       "metadata": {
-        "id": "rMl4ZBgXJaGr"
+        "id": "MR8NQwwcl4OE"
       },
       "execution_count": null,
       "outputs": []
